--- a/Test html and css/indexOpinion.html
+++ b/Test html and css/indexOpinion.html
@@ -8,6 +8,10 @@
     <script src="https://kit.fontawesome.com/fdeca5c444.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" sizes="16x16" href="download.jfif">
     <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css "/>
+    <script> src=" https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "</script>
+    <script> src="https://code.jquery.com/jquery-3.4.1.min.js"</script>
+    <script> src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"</script>
 </head>
 <body>
     <header>
