--- a/Test html and css/indexCreateAccount.html
+++ b/Test html and css/indexCreateAccount.html
@@ -7,6 +7,7 @@
     <title>BgRaces</title>
     <script src="https://kit.fontawesome.com/fdeca5c444.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" sizes="16x16" href="download.jfif">
+    <link rel="stylesheet" href="skeleton.css">
     <link rel="stylesheet" href="skeletonCreateAccount.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css "/>
@@ -46,9 +47,8 @@
          </div>
     </header>     
     <main>
-       
-<div class="tabContent registration active">
-    <!-- registration -->
+      <div class="background"  id="backgroundOthers">
+            <!-- registration -->
     <h3>Създай своя безплатен акаунт сега и да запалим гумите!</h3>
 
     <div>
@@ -102,6 +102,7 @@
             <span class="crLabel">Имам навършени 16 или повече години.</span></label></p>
 
             <button  tabindex="5"  type="button" class="btn btn-success">Регистрирай своя акаунт</button>
+            <p> </p>
         </form>	
     	</div>
         </div>
