--- a/Test html and css/indexFAQ.html
+++ b/Test html and css/indexFAQ.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>BgRaces</title>
-        <script src="https://kit.fontawesome.com/fdeca5c444.js" crossorigin="anonymous"></script>
-        <link rel="icon" type="image/x-icon" sizes="16x16" href="download.jfif">
-        <link rel="stylesheet" href="skeleton.css">
-        <link rel="stylesheet" href="bootstrap.min.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css "/>
-        <script> src=" https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "</script>
-        <script> src="https://code.jquery.com/jquery-3.4.1.min.js"</script>
-        <script> src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"</script>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>BgRaces</title>
+    <script src="https://kit.fontawesome.com/fdeca5c444.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="download.jfif">
+    <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css "/>
+    <script> src=" https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "</script>
+    <script> src="https://code.jquery.com/jquery-3.4.1.min.js"</script>
+    <script> src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"</script>
+</head>
 <body>
     <header>
         <div class="bs-component">
@@ -27,11 +27,11 @@
                   <li class="nav-item ">
                     <a class="nav-link" href="indexHome.html">Начало <span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#">Мнения</a>
-                  </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="indexFAQ.html">ЧЗВ</a>
+                    <a class="nav-link" href="indexOpinion.html">Мнения</a>
+                  </li>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">ЧЗВ</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="#">Галерия</a>
@@ -44,26 +44,23 @@
               </div>
             </nav>
          </div>
-    </header>     
+    </header>   
     <main>
-        <div class="form-group">
-            <textarea class="form-control" id="exampleTextarea" cols="50" rows="2" class="flL w200"></textarea>
-          </div>
-          <button type="button" class="btn btn-secondary">Побликувай</button>
-          <p>
-            <div class="background"  id="backgroundOthers">
-          <div class="alert alert-dismissible alert-secondary">
-            <strong>Тук</strong> ще се побликуват мнения!
-          </div>
-        </div>
-        </p>
-          <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-            <div class="btn-group mr-2" role="group" aria-label="First group">
-              <button type="button" class="btn btn-secondary">1</button>
-              <button type="button" class="btn btn-secondary">2</button>
-              <button type="button" class="btn btn-secondary">3</button>
-              <button type="button" class="btn btn-secondary">4</button>
+        <p></p>
+        <div class="background"  id="backgroundOthers">
+            <div class="card text-white bg-secondary mb-3" style="max-width: 100%; ">
+            <div class="card-header"><h4 class="card-title">Secondary card title</h4></div>
+            <div class="card-body">
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             </div>
+          </div>
+            <div class="card text-white bg-secondary mb-3" style="max-width: 100%; ">
+              <div class="card-header"><h4 class="card-title">Secondary card title</h4></div>
+              <div class="card-body">
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              </div>
+            </div>
+        </div>
     </main>
     <footer>  
         <div class="bs-component">
