--- a/Test html and css/indexHome.html
+++ b/Test html and css/indexHome.html
@@ -46,6 +46,7 @@
          </div>
     </header>   
     <main>
+      <div class="background" >
         <form>
             <fieldset>
               <div class="form-group">
@@ -54,7 +55,7 @@
                     <div class="col-sm-4">
                 <label for="exampleInputEmail1">Потребителско Име:</label>
                 <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                 placeholder="Потребителско Име:"  maxlength="50" size="15" >
+                 placeholder="Потребителско Име:"  maxlength="50"  >
               </div> </div> </div> 
               <div class="col-sm-4"></div>
               <div class="form-group">
@@ -62,7 +63,7 @@
                     <div class="col-sm-4"></div>
                     <div class="col-sm-4">
                 <label for="exampleInputPassword1">Парола:</label>
-                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Парола:" maxlength="50" size="15" >
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Парола:" maxlength="50"  >
             </div> </div> </div> 
             <div class="col-sm-4"></div>
             </fieldset>
@@ -76,6 +77,7 @@
         <p>
          <a href="indexCreateAccount.html" onclick="setBox('pwforgotten')">Регистрация</a>
         </p>
+        </div>
     </main>
     <footer>  
         <div class="bs-component">
