--- a/Test html and css/indexCreateAccount.html
+++ b/Test html and css/indexCreateAccount.html
@@ -7,7 +7,6 @@
     <title>BgRaces</title>
     <script src="https://kit.fontawesome.com/fdeca5c444.js" crossorigin="anonymous"></script>
     <link rel="icon" type="image/x-icon" sizes="16x16" href="download.jfif">
-    <link rel="stylesheet" href="skeleton.css">
     <link rel="stylesheet" href="skeletonCreateAccount.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css "/>
@@ -35,7 +34,7 @@
                     <a class="nav-link" href="indexFAQ.html">ЧЗВ</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Галерия</a>
+                    <a class="nav-link" href="indexGallery.html">Галерия</a>
                   </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
