--- a/Test html and css/indexHome.html
+++ b/Test html and css/indexHome.html
@@ -34,7 +34,7 @@
                     <a class="nav-link" href="indexFAQ.html">ЧЗВ</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Галерия</a>
+                    <a class="nav-link" href="indexGallery.html">Галерия</a>
                   </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
