--- a/Test html and css/indexFAQ.html
+++ b/Test html and css/indexFAQ.html
@@ -1,68 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>BgRaces</title>
-    <script src="https://kit.fontawesome.com/fdeca5c444.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" sizes="16x16" href="download.jfif">
-    <link rel="stylesheet" href="skeleton.css">
-    <link rel="stylesheet" href="bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css "/>
-    <script> src=" https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "</script>
-    <script> src="https://code.jquery.com/jquery-3.4.1.min.js"</script>
-    <script> src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"</script>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
+<title>BgRaces</title>
+<script src="https://kit.fontawesome.com/fdeca5c444.js" crossorigin="anonymous"></script>
+<link rel="icon" type="image/x-icon" sizes="16x16" href="download.jfif">
+<link rel="stylesheet" href="skeletonFAQ.css">
+<link rel="stylesheet" href="bootstrap.min.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css ">
+<script> src=" https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "</script>
+<script> src="https://code.jquery.com/jquery-3.4.1.min.js"</script>
+<script> src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"</script>
 </head>
 <body>
-    <header>
-        <div class="bs-component">
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-              <a class="navbar-brand" href="indexHome.html"><i class="fas fa-flag-checkered"> </i> </a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarColor02">
-                <ul class="navbar-nav mr-auto">
-                  <li class="nav-item ">
-                    <a class="nav-link" href="indexHome.html">Начало <span class="sr-only">(current)</span></a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="indexOpinion.html">Мнения</a>
-                  </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#">ЧЗВ</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Галерия</a>
-                  </li>
-                </ul>
-                <form class="form-inline my-2 my-lg-0">
-                  <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                  <button class="btn btn-secondary my-2 my-sm-0" type="submit">Търсене</button>
-                </form>
-              </div>
-            </nav>
-         </div>
-    </header>   
-    <main>
-        <p></p>
-        <div class="background"  id="backgroundOthers">
-            <div class="card text-white bg-secondary mb-3" style="max-width: 100%; ">
-            <div class="card-header"><h4 class="card-title">Secondary card title</h4></div>
-            <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-            </div>
+  <header>
+    <div class="bs-component">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <a class="navbar-brand" href="indexHome.html"><i class="fas fa-flag-checkered"> </i> </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarColor02">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item ">
+                <a class="nav-link" href="indexHome.html">Начало <span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="indexOpinion.html">Мнения</a>
+              </li>
+              <li class="nav-item active">
+                <a class="nav-link" href="#">ЧЗВ</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="indexGallery.html">Галерия</a>
+              </li>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="text" placeholder="Search">
+              <button class="btn btn-secondary my-2 my-sm-0" type="submit">Търсене</button>
+            </form>
           </div>
-            <div class="card text-white bg-secondary mb-3" style="max-width: 100%; ">
-              <div class="card-header"><h4 class="card-title">Secondary card title</h4></div>
-              <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-              </div>
-            </div>
-        </div>
-    </main>
-    <footer>  
+        </nav>
+     </div>
+  </header>   
+<main>  
+  <div class="form-group row">
+    <div class="col-sm-3"> <div class="tabs">
+      <button class="tablinks" onclick="hoverTabs(event, 'London')" id="defaultOpen">London</button>
+      <button class="tablinks" onclick="hoverTabs(event, 'Paris')">Paris</button>
+      <button class="tablinks" onclick="hoverTabs(event, 'Tokyo')">Tokyo</button>
+      <button class="tablinks" onclick="hoverTabs(event, 'Tokyo1')">Tokyo1</button>
+      <button class="tablinks" onclick="hoverTabs(event, 'Tokyo2')">Tokyo2</button>
+      <button class="tablinks" onclick="hoverTabs(event, 'Tokyo3')">Tokyo3</button>
+      <button class="tablinks" onclick="hoverTabs(event, 'Tokyo4')">Tokyo4</button>
+    </div></div>
+    <div class="col-sm-9">
+  <div id="London" class="tabcontent">
+    <h3>London</h3>
+    <p>London is the capital city of England.</p>
+  </div>
+  <div id="Paris" class="tabcontent">
+    <h3>Paris</h3>
+    <p>Paris is the capital of France.</p> 
+  </div>
+  <div id="Tokyo" class="tabcontent">
+    <h3>Tokyo</h3>
+    <p>Tokyo is the capital of Japan.</p>
+  </div>
+  <div id="Tokyo1" class="tabcontent">
+    <h3>Tokyo1</h3>
+    <p>111111111111111111</p>
+  </div>
+  <div id="Tokyo2" class="tabcontent">
+    <h3>Tokyo2</h3>
+    <p>222222222222222</p>
+  </div> 
+  <div id="Tokyo3" class="tabcontent">
+    <h3>Tokyo3</h3>
+    <p>33333333333333333</p>
+  </div> 
+  <div id="Tokyo4" class="tabcontent">
+    <h3>Tokyo4</h3>
+    <p>444444444444444444</p>
+  </div>
+</div>
+
+
+  
+</main>
+ <footer>  
         <div class="bs-component">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
               <a class="navbar-brand" href="#"><i class="fas fa-flag-checkered"> </i> </a>
@@ -91,4 +120,24 @@
          </div>
     </footer>
 </body>
-</html>
+
+<script>
+  function hoverTabs(evt, name) {
+    var i, tabcontent, tablinks;
+    tabcontent = document.getElementsByClassName("tabcontent");
+    for (i = 0; i < tabcontent.length; i++) {
+      tabcontent[i].style.display = "none";
+    }
+    tablinks = document.getElementsByClassName("tablinks");
+    for (i = 0; i < tablinks.length; i++) {
+      tablinks[i].className = tablinks[i].className.replace(" active", "");
+    }
+    document.getElementById(name).style.display = "block";
+    evt.currentTarget.className += " active";
+  }
+  
+  // Get the element with id="defaultOpen" and click on it
+  document.getElementById("defaultOpen").click();
+  
+  </script>
+</html> 
