--- a/Test html and css/indexGallery.html
+++ b/Test html and css/indexGallery.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>BgRaces</title>
-        <script src="https://kit.fontawesome.com/fdeca5c444.js" crossorigin="anonymous"></script>
-        <link rel="icon" type="image/x-icon" sizes="16x16" href="download.jfif">
-        <link rel="stylesheet" href="skeleton.css">
-        <link rel="stylesheet" href="bootstrap.min.css">
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css "/>
-        <script> src=" https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "</script>
-        <script> src="https://code.jquery.com/jquery-3.4.1.min.js"</script>
-        <script> src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"</script>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>BgRaces</title>
+    <script src="https://kit.fontawesome.com/fdeca5c444.js" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="download.jfif">
+    <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css ">
+    <link rel="stylesheet" href="java.js"/>
+    <script> src=" https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "</script>
+    <script> src="https://code.jquery.com/jquery-3.4.1.min.js"</script>
+    <script> src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"</script>
+</head>
 <body>
     <header>
         <div class="bs-component">
@@ -27,14 +28,14 @@
                   <li class="nav-item ">
                     <a class="nav-link" href="indexHome.html">Начало <span class="sr-only">(current)</span></a>
                   </li>
-                  <li class="nav-item active">
-                    <a class="nav-link" href="#">Мнения</a>
-                  </li>
                   <li class="nav-item">
+                    <a class="nav-link" href="indexOpinion.html">Мнения</a>
+                  </li>
+                  <li class="nav-item ">
                     <a class="nav-link" href="indexFAQ.html">ЧЗВ</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="indexGallery.html">Галерия</a>
+                  <li class="nav-item active">
+                    <a class="nav-link" href="#">Галерия</a>
                   </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
@@ -44,26 +45,13 @@
               </div>
             </nav>
          </div>
-    </header>     
+    </header>   
     <main>
-        <div class="form-group">
-            <textarea class="form-control" id="exampleTextarea" cols="50" rows="2" class="flL w200"></textarea>
-          </div>
-          <button type="button" class="btn btn-secondary">Побликувай</button>
-          <p>
-            <div class="background"  id="backgroundOthers">
-          <div class="alert alert-dismissible alert-secondary">
-            <strong>Тук</strong> ще се побликуват мнения!
-          </div>
-        </div>
-        </p>
-          <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
-            <div class="btn-group mr-2" role="group" aria-label="First group">
-              <button type="button" class="btn btn-secondary">1</button>
-              <button type="button" class="btn btn-secondary">2</button>
-              <button type="button" class="btn btn-secondary">3</button>
-              <button type="button" class="btn btn-secondary">4</button>
-            </div>
+       
+
+       
+
+
     </main>
     <footer>  
         <div class="bs-component">
