Add Programming Basics, Technologies Fundamentals

--- a/Test html and css/indexHome.html
+++ b/Test html and css/indexHome.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BgRaces</title>
     <script src="https://kit.fontawesome.com/fdeca5c444.js" crossorigin="anonymous"></script>
-    <link rel="icon" type="image/x-icon" sizes="16x16" href="download.jfif">
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="CARHD.jpg">
     <link rel="stylesheet" href="skeleton.css">
     <link rel="stylesheet" href="bootstrap.min.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css "/>
@@ -72,7 +72,7 @@
             <button  tabindex="5"  type="button" class="btn btn-success">Вход</button>
         </p>
         <p>
-            <a href="#" onclick="setBox('pwforgotten')">Забравена парола?</a>
+            <a href="test.html" onclick="setBox('pwforgotten')">Забравена парола?</a>
         </p>
         <p>
          <a href="indexCreateAccount.html" onclick="setBox('pwforgotten')">Регистрация</a>
